src/WebApp/wwwroot/css/site.css
/* ... */
/* Fix color accessibility
-------------------------------------------------- */
html:not([data-bs-theme="dark"]) .bg-dark-subtle .text-danger-emphasis {
    color: hsl(355, 98%, 24%) !important;
}

html:not([data-bs-theme="dark"]) .link-warning:focus, .link-warning:hover {
    color: RGBA(140, 110, 33, var(--bs-link-opacity, 1)) !important;
    text-decoration-color: RGBA(140, 110, 33, var(--bs-link-underline-opacity, 1)) !important;
}

/* Accessibility fixes for outlined buttons */
html:not([data-bs-theme="dark"]) .btn-outline-warning {
    --bs-btn-color: oklch(0.6 0.17 84.92);
    --bs-btn-border-color: oklch(0.75 0.17 84.92);
}

.btn-outline-info {
    --bs-btn-color: oklch(0.46 0.14 218.06);
}

[data-bs-theme="dark"] .btn-outline-info {
    --bs-btn-color: oklch(0.9 0.14 218.06);
}

[data-bs-theme="dark"] .btn-outline-secondary {
    --bs-btn-color: hsl(208 7% 85%);
}

/* Navbar logo
-------------------------------------------------- */
.img-logo {
    height: 40px;
}

/* Off-canvas toggle
-------------------------------------------------- */
.offcanvas-toggler {
    padding: .25rem .5rem;
    margin-right: .5rem;
    border: var(--bs-border-width) var(--bs-border-style) var(--bs-navbar-toggler-border-color);
    border-radius: var(--bs-border-radius);
    vertical-align: middle;
    background-color: transparent;
}

.offcanvas-toggler .bi {
    height: 1.5em;
    width: 1.5em;
}

.navbar .navbar-toggler:hover,
.offcanvas-toggler:hover {
    border-color: rgba(var(--bs-emphasis-color-rgb), 0.4);
}

[data-bs-theme="dark"] .navbar .navbar-toggler,
[data-bs-theme="dark"] .offcanvas-toggler {
    color: hsla(var(--base-hue), 0%, 100%, 0.7);
}

/* Skip to content link
-------------------------------------------------- */
.skip-nav {
    left: .2rem;
    padding: 1rem 1.5rem;
    position: absolute;
    top: -5rem;
    transition: all 0.2s ease-in-out;
    z-index: 2002;
}

.skip-nav:focus {
    outline: 0;
    top: .2rem;
}

/* Button with image 
-------------------------------------------------- */
.btn-img {
    line-height: 1;
}

.btn-img img {
    height: 35px;
}

.btn-img-bg {
    background: white;
    box-shadow: 0 0 1px white;
    padding: 2px;
}

.btn-img svg {
    fill: #222;
    transition: fill .15s ease-in-out;
    border-radius: 4px;
}

[data-bs-theme="dark"] .btn-img svg {
    fill: #fff;
}

.btn:hover svg,
.btn:active svg,
.btn:focus-visible svg {
    fill: var(--bs-btn-hover-color);
}

/* Text utilities
-------------------------------------------------- */
.font-weight-medium {
    font-weight: 500 !important;
}

.text-pre-line {
    white-space: pre-line !important;
}

.text-decoration-hover {
    text-decoration: none !important;
}

.text-decoration-hover:hover, .text-decoration-hover:focus {
    text-decoration: underline !important;
}

.text-dotted-underline {
    text-decoration: underline dotted;
}

/* Spacing utilities
-------------------------------------------------- */
.ms-n1 {
    margin-left: -0.25rem !important;
}

.ms-n4 {
    margin-left: -1.5rem !important;
}

.mx-neg {
    margin-left: -.75rem !important;
    margin-right: -.75rem !important;
    padding-left: .75rem !important;
    padding-right: .75rem !important;
}

/* Apply negative margin at the small breakpoint */
@media (min-width: 576px) {
    .mx-sm-neg {
        margin-left: -.75rem !important;
        margin-right: -.75rem !important;
        padding-left: .75rem !important;
        padding-right: .75rem !important;
    }
}

/* External link indicator icon
-------------------------------------------------- */
a[target]::after,
#facility-map .facility-map-info a[target]::after {
    content: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='rgb(60,140,253)' viewBox='0 0 16 16'><path fill-rule='evenodd' d='M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5'/><path fill-rule='evenodd' d='M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z'/></svg>");
    margin-left: .4em;
}

/* Suppress some external link icons */
footer a[target]::after,
#facility-map a::after,
a[target].no-external-link::after {
    content: none;
}

/* Fix conflicting table border classes
-------------------------------------------------- */
.table-borderless .table-group-divider {
    border-top-width: calc(var(--bs-border-width) * 2);
}

/* Table hover background
-------------------------------------------------- */
.table-hover.table-borderless th:first-child, .table-hover.table-borderless td:first-child {
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
}

.table-hover.table-borderless td:last-child {
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
}

/* Callouts
-------------------------------------------------- */
/* Adapted from the Bootstrap Docs (https://getbootstrap.com/).
  Licensed under the Creative Commons Attribution 3.0 Unported License. */

.callout {
    --bs-link-color-rgb: var(--callout-link);
    --callout-color: var(--bs-body-color);
    --callout-bg: var(--bs-dark-bg-subtle);
    --callout-border: var(--bs-dark-border-subtle);
    padding: 1.25rem;
    margin-top: 1.25rem;
    margin-bottom: 1.25rem;
    color: var(--callout-color, inherit);
    background-color: var(--callout-bg, var(--bs-gray-200));
    border-left: 0.25rem solid var(--callout-border, var(--bs-gray-400));
}

.callout > :last-child {
    margin-bottom: 0;
}

.callout + .callout {
    margin-top: -.25rem;
}

.callout .highlight {
    background-color: rgba(0, 0, 0, 0.05);
}

.callout-info {
    --callout-color: var(--bs-info-text-emphasis);
    --callout-bg: var(--bs-info-bg-subtle);
    --callout-border: var(--bs-info-border-subtle);
}
/* ... */

